# CustomerAgent

./: .gitignore  AGENTS.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: sync_to_hf.yml
agent/client/mongodb/: __init__.py  async_mongo.py  base.py  mongo.py  utils.py
agent/utils/: async_utils.py
artifacts/docker/: Dockerfile
artifacts/scripts/: build_image.sh  init_dev_env.sh
server/: app.py
tests/client/mongodb/: conftest.py  test_async_mongo.py  test_base.py  test_mongo.py  test_utils.py
tests/server/: test_app.py
tests/utils/: http_utils.py
